--- a/scss/20_base/_base.scss
+++ b/scss/20_base/_base.scss
@@ -232,9 +232,12 @@
   }
 
   code {
+    // Fixes issue where safari has a differnet baseline for RH Text vs Mono
     display: inline-flex;
     align-items: baseline;
     padding: 0.25em 0.5em;
+    // Adds a space between elements, see https://issues.redhat.com/browse/CCS-6018
+    gap: 0.6429em; // A 'space' was measured at 9px at 14px font size.
     font-size: $font-size--monospace;
     line-height: $line-height--base;
     font-family: $font-family--code;
